给设置那些翻译成中文的了

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
         ],
 		"outDir": "out",
 		"rootDir": ".",
-		"sourceMap": true,
-		"watch": false
+		"sourceMap": true
 	},
 	"exclude": [
 		"node_modules",
 		".history"
 	]
 }
+
